@@ -37,12 +37,6 @@
 #include <sys/types.h>
 #include <utime.h>
 
-#ifdef _POSIX_VERSION
- /* Is there a better way to decide whether or not we should use flock */
- /* vs. fcntl.  Example: broken SunOS tmpfs.... */
-#define POSIX_FILE_LOCKS
-#endif
-
 #if defined (POSIX_FILE_LOCKS) && !defined(unicos61)
 #include <fcntl.h>
 #endif
